fix: sticker install button overflow

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -5783,7 +5783,7 @@ button.module-image__border-overlay:focus {
   }
 
   &__controls {
-    flex-shrink: 1;
+    flex-shrink: 0;
     display: flex;
     justify-content: center;
     align-items: center;
